# SuperSonicML

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/bakkesmod/plugin/: bakkesmodplugin.h  bakkesmodsdk.h
include/bakkesmod/wrappers/: MMRWrapper.h  PlayerControllerWrapper.h  PluginManagerWrapper.h  ReplayServerWrapper.h  StructArrayWrapper.h  arraywrapper.h  canvaswrapper.h  cvarmanagerwrapper.h  cvarwrapper.h  includes.h  linmath.h  wrapperstructs.h
include/bakkesmod/wrappers/Engine/: ActorWrapper.h  ObjectWrapper.h  UnrealStringWrapper.h
include/bakkesmod/wrappers/GameEvent/: GameEditorWrapper.h  GameEventWrapper.h  GameSettingPlaylistWrapper.h  ReplayDirectorWrapper.h  ReplaySoccarWrapper.h  ReplayWrapper.h  ServerWrapper.h  TeamGameEventWrapper.h  TrainingEditorWrapper.h  TutorialWrapper.h
include/bakkesmod/wrappers/GameObject/: BallWrapper.h  BoostPickupWrapper.h  CameraWrapper.h  CarWrapper.h  FXActorWrapper.h  GoalWrapper.h  PhysicalMaterialPropertyWrapper.h  PlayerReplicationInfoWrapper.h  PriWrapper.h  PriXWrapper.h  RBActorWrapper.h  TeamInfoWrapper.h  TeamWrapper.h  VehiclePickupWrapper.h  VehicleWrapper.h
include/bakkesmod/wrappers/GameObject/CarComponent/: BoostWrapper.h  CarComponentWrapper.h  VehicleSimWrapper.h  WheelWrapper.h
include/bakkesmod/wrappers/GameObject/PerformanceStats/: SampleHistoryWrapper.h  StatGraphSystemWrapper.h  StatGraphWrapper.h
include/bakkesmod/wrappers/GameObject/RumbleComponent/: BallFreezePickup.h  GrapplingHookPickup.h  GravityPickup.h  RumblePickupComponentWrapper.h  VelcroPickup.h
math/: mat.h  math.h  readme.md  vec.h
resources/: supersonicml.set
src/: Constants.h  GameData.cpp  GameData.h  Hooks.cpp  Hooks.h  SuperSonicML.cpp  SuperSonicML.h
src/bots/: AerialAtbaBot.cpp  AerialAtbaBot.h  AtbaBot.cpp  AtbaBot.h  BotClass.cpp  BotClass.h
src/experiments/: Experiment.h  TeacherLearnerExperiment.cpp  TeacherLearnerExperiment.h
